src/main/java/org/policylanguage/PolicyLanguageParser.java
// Generated from /Users/gertibushati/Desktop/Extended_Policy_Specification/src/main/resources/PolicyLanguage.g4 by ANTLR 4.10.1
package org.policylanguage;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class PolicyLanguageParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.10.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, SHIP=2, AS_AGGREGATES=3, FROM=4, TO=5, WHERE=6, AND=7, OR=8, GROUP_BY=9, 
		EXCEPT=10, ASTERISK=11, PARAMETER=12, TEXT=13, NUMBER=14, OPERATOR=15, 
		WHITESPACE=16, NEWLINE=17, TAB=18;
	public static final int
		RULE_policy_expression = 0, RULE_positive_policy = 1, RULE_ship = 2, RULE_ship_attribute = 3, 
		RULE_as_aggregates = 4, RULE_aggr_func = 5, RULE_from = 6, RULE_table = 7, 
		RULE_to = 8, RULE_location = 9, RULE_where = 10, RULE_operator = 11, RULE_operand = 12, 
		RULE_group_by = 13, RULE_negative_policy = 14, RULE_except = 15, RULE_except_attribute = 16, 
		RULE_except_as_aggregates = 17, RULE_except_to = 18, RULE_except_where = 19, 
		RULE_except_group_by = 20;
	private static String[] makeRuleNames() {
		return new String[] {
			"policy_expression", "positive_policy", "ship", "ship_attribute", "as_aggregates", 
			"aggr_func", "from", "table", "to", "location", "where", "operator", 
			"operand", "group_by", "negative_policy", "except", "except_attribute", 
			"except_as_aggregates", "except_to", "except_where", "except_group_by"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "','", null, null, null, null, null, null, null, null, null, "'*'", 
			null, null, null, null, "' '"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, "SHIP", "AS_AGGREGATES", "FROM", "TO", "WHERE", "AND", "OR", 
			"GROUP_BY", "EXCEPT", "ASTERISK", "PARAMETER", "TEXT", "NUMBER", "OPERATOR", 
			"WHITESPACE", "NEWLINE", "TAB"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "PolicyLanguage.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PolicyLanguageParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class Policy_expressionContext extends ParserRuleContext {
		public Positive_policyContext positive_policy() {
			return getRuleContext(Positive_policyContext.class,0);
		}
		public List<Negative_policyContext> negative_policy() {
			return getRuleContexts(Negative_policyContext.class);
		}
		public Negative_policyContext negative_policy(int i) {
			return getRuleContext(Negative_policyContext.class,i);
		}
		public Policy_expressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_policy_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PolicyLanguageListener ) ((PolicyLanguageListener)listener).enterPolicy_expression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PolicyLanguageListener ) ((PolicyLanguageListener)listener).exitPolicy_expression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PolicyLanguageVisitor ) return ((PolicyLanguageVisitor<? extends T>)visitor).visitPolicy_expression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Policy_expressionContext policy_expression() throws RecognitionException {
		Policy_expressionContext _localctx = new Policy_expressionContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_policy_expression);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(42);
			positive_policy();
			setState(46);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==EXCEPT) {
				{
				{
				setState(43);
				negative_policy();
				}
				}
				setState(48);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Positive_policyContext extends ParserRuleContext {
		public ShipContext ship() {
			return getRuleContext(ShipContext.class,0);
		}
		public FromContext from() {
			return getRuleContext(FromContext.class,0);
		}
		public ToContext to() {
			return getRuleContext(ToContext.class,0);
		}
		public As_aggregatesContext as_aggregates() {
			return getRuleContext(As_aggregatesContext.class,0);
		}
		public WhereContext where() {
			return getRuleContext(WhereContext.class,0);
		}
		public Group_byContext group_by() {
			return getRuleContext(Group_byContext.class,0);
		}
		public Positive_policyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_positive_policy; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PolicyLanguageListener ) ((PolicyLanguageListener)listener).enterPositive_policy(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PolicyLanguageListener ) ((PolicyLanguageListener)listener).exitPositive_policy(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PolicyLanguageVisitor ) return ((PolicyLanguageVisitor<? extends T>)visitor).visitPositive_policy(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Positive_policyContext positive_policy() throws RecognitionException {
		Positive_policyContext _localctx = new Positive_policyContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_positive_policy);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(49);
			ship();
			setState(51);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==AS_AGGREGATES) {
				{
				setState(50);
				as_aggregates();
				}
			}

			setState(53);
			from();
			setState(54);
			to();
			setState(56);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WHERE) {
				{
				setState(55);
				where();
				}
			}

			setState(59);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==GROUP_BY) {
				{
				setState(58);
				group_by();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ShipContext extends ParserRuleContext {
		public TerminalNode SHIP() { return getToken(PolicyLanguageParser.SHIP, 0); }
		public TerminalNode ASTERISK() { return getToken(PolicyLanguageParser.ASTERISK, 0); }
		public List<Ship_attributeContext> ship_attribute() {
			return getRuleContexts(Ship_attributeContext.class);
		}
		public Ship_attributeContext ship_attribute(int i) {
			return getRuleContext(Ship_attributeContext.class,i);
		}
		public ShipContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ship; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PolicyLanguageListener ) ((PolicyLanguageListener)listener).enterShip(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PolicyLanguageListener ) ((PolicyLanguageListener)listener).exitShip(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PolicyLanguageVisitor ) return ((PolicyLanguageVisitor<? extends T>)visitor).visitShip(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ShipContext ship() throws RecognitionException {
		ShipContext _localctx = new ShipContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_ship);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(61);
			match(SHIP);
			setState(71);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ASTERISK:
				{
				setState(62);
				match(ASTERISK);
				}
				break;
			case PARAMETER:
				{
				setState(63);
				ship_attribute();
				setState(68);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__0) {
					{
					{
					setState(64);
					match(T__0);
					setState(65);
					ship_attribute();
					}
					}
					setState(70);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Ship_attributeContext extends ParserRuleContext {
		public TerminalNode PARAMETER() { return getToken(PolicyLanguageParser.PARAMETER, 0); }
		public Ship_attributeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ship_attribute; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PolicyLanguageListener ) ((PolicyLanguageListener)listener).enterShip_attribute(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PolicyLanguageListener ) ((PolicyLanguageListener)listener).exitShip_attribute(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PolicyLanguageVisitor ) return ((PolicyLanguageVisitor<? extends T>)visitor).visitShip_attribute(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Ship_attributeContext ship_attribute() throws RecognitionException {
		Ship_attributeContext _localctx = new Ship_attributeContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_ship_attribute);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(73);
			match(PARAMETER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class As_aggregatesContext extends ParserRuleContext {
		public TerminalNode AS_AGGREGATES() { return getToken(PolicyLanguageParser.AS_AGGREGATES, 0); }
		public List<Aggr_funcContext> aggr_func() {
			return getRuleContexts(Aggr_funcContext.class);
		}
		public Aggr_funcContext aggr_func(int i) {
			return getRuleContext(Aggr_funcContext.class,i);
		}
		public As_aggregatesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_as_aggregates; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PolicyLanguageListener ) ((PolicyLanguageListener)listener).enterAs_aggregates(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PolicyLanguageListener ) ((PolicyLanguageListener)listener).exitAs_aggregates(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PolicyLanguageVisitor ) return ((PolicyLanguageVisitor<? extends T>)visitor).visitAs_aggregates(this);
			else return visitor.visitChildren(this);
		}
	}

	public final As_aggregatesContext as_aggregates() throws RecognitionException {
		As_aggregatesContext _localctx = new As_aggregatesContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_as_aggregates);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(75);
			match(AS_AGGREGATES);
			setState(76);
			aggr_func();
			setState(81);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0) {
				{
				{
				setState(77);
				match(T__0);
				setState(78);
				aggr_func();
				}
				}
				setState(83);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Aggr_funcContext extends ParserRuleContext {
		public TerminalNode PARAMETER() { return getToken(PolicyLanguageParser.PARAMETER, 0); }
		public Aggr_funcContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_aggr_func; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PolicyLanguageListener ) ((PolicyLanguageListener)listener).enterAggr_func(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PolicyLanguageListener ) ((PolicyLanguageListener)listener).exitAggr_func(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PolicyLanguageVisitor ) return ((PolicyLanguageVisitor<? extends T>)visitor).visitAggr_func(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Aggr_funcContext aggr_func() throws RecognitionException {
		Aggr_funcContext _localctx = new Aggr_funcContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_aggr_func);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(84);
			match(PARAMETER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FromContext extends ParserRuleContext {
		public TerminalNode FROM() { return getToken(PolicyLanguageParser.FROM, 0); }
		public TableContext table() {
			return getRuleContext(TableContext.class,0);
		}
		public FromContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_from; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PolicyLanguageListener ) ((PolicyLanguageListener)listener).enterFrom(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PolicyLanguageListener ) ((PolicyLanguageListener)listener).exitFrom(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PolicyLanguageVisitor ) return ((PolicyLanguageVisitor<? extends T>)visitor).visitFrom(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FromContext from() throws RecognitionException {
		FromContext _localctx = new FromContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_from);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(86);
			match(FROM);
			setState(87);
			table();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TableContext extends ParserRuleContext {
		public TerminalNode PARAMETER() { return getToken(PolicyLanguageParser.PARAMETER, 0); }
		public TableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_table; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PolicyLanguageListener ) ((PolicyLanguageListener)listener).enterTable(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PolicyLanguageListener ) ((PolicyLanguageListener)listener).exitTable(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PolicyLanguageVisitor ) return ((PolicyLanguageVisitor<? extends T>)visitor).visitTable(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TableContext table() throws RecognitionException {
		TableContext _localctx = new TableContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_table);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(89);
			match(PARAMETER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ToContext extends ParserRuleContext {
		public TerminalNode TO() { return getToken(PolicyLanguageParser.TO, 0); }
		public TerminalNode ASTERISK() { return getToken(PolicyLanguageParser.ASTERISK, 0); }
		public List<LocationContext> location() {
			return getRuleContexts(LocationContext.class);
		}
		public LocationContext location(int i) {
			return getRuleContext(LocationContext.class,i);
		}
		public ToContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_to; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PolicyLanguageListener ) ((PolicyLanguageListener)listener).enterTo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PolicyLanguageListener ) ((PolicyLanguageListener)listener).exitTo(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PolicyLanguageVisitor ) return ((PolicyLanguageVisitor<? extends T>)visitor).visitTo(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ToContext to() throws RecognitionException {
		ToContext _localctx = new ToContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_to);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(91);
			match(TO);
			setState(101);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ASTERISK:
				{
				setState(92);
				match(ASTERISK);
				}
				break;
			case PARAMETER:
				{
				setState(93);
				location();
				setState(98);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__0) {
					{
					{
					setState(94);
					match(T__0);
					setState(95);
					location();
					}
					}
					setState(100);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LocationContext extends ParserRuleContext {
		public TerminalNode PARAMETER() { return getToken(PolicyLanguageParser.PARAMETER, 0); }
		public LocationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_location; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PolicyLanguageListener ) ((PolicyLanguageListener)listener).enterLocation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PolicyLanguageListener ) ((PolicyLanguageListener)listener).exitLocation(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PolicyLanguageVisitor ) return ((PolicyLanguageVisitor<? extends T>)visitor).visitLocation(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LocationContext location() throws RecognitionException {
		LocationContext _localctx = new LocationContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_location);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(103);
			match(PARAMETER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class WhereContext extends ParserRuleContext {
		public TerminalNode WHERE() { return getToken(PolicyLanguageParser.WHERE, 0); }
		public List<OperandContext> operand() {
			return getRuleContexts(OperandContext.class);
		}
		public OperandContext operand(int i) {
			return getRuleContext(OperandContext.class,i);
		}
		public List<OperatorContext> operator() {
			return getRuleContexts(OperatorContext.class);
		}
		public OperatorContext operator(int i) {
			return getRuleContext(OperatorContext.class,i);
		}
		public List<TerminalNode> AND() { return getTokens(PolicyLanguageParser.AND); }
		public TerminalNode AND(int i) {
			return getToken(PolicyLanguageParser.AND, i);
		}
		public List<TerminalNode> OR() { return getTokens(PolicyLanguageParser.OR); }
		public TerminalNode OR(int i) {
			return getToken(PolicyLanguageParser.OR, i);
		}
		public WhereContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_where; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PolicyLanguageListener ) ((PolicyLanguageListener)listener).enterWhere(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PolicyLanguageListener ) ((PolicyLanguageListener)listener).exitWhere(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PolicyLanguageVisitor ) return ((PolicyLanguageVisitor<? extends T>)visitor).visitWhere(this);
			else return visitor.visitChildren(this);
		}
	}

	public final WhereContext where() throws RecognitionException {
		WhereContext _localctx = new WhereContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_where);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105);
			match(WHERE);
			setState(106);
			operand();
			setState(107);
			operator();
			setState(108);
			operand();
			setState(116);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==AND || _la==OR) {
				{
				{
				setState(109);
				_la = _input.LA(1);
				if ( !(_la==AND || _la==OR) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(110);
				operand();
				setState(111);
				operator();
				setState(112);
				operand();
				}
				}
				setState(118);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OperatorContext extends ParserRuleContext {
		public TerminalNode OPERATOR() { return getToken(PolicyLanguageParser.OPERATOR, 0); }
		public OperatorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_operator; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PolicyLanguageListener ) ((PolicyLanguageListener)listener).enterOperator(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PolicyLanguageListener ) ((PolicyLanguageListener)listener).exitOperator(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PolicyLanguageVisitor ) return ((PolicyLanguageVisitor<? extends T>)visitor).visitOperator(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OperatorContext operator() throws RecognitionException {
		OperatorContext _localctx = new OperatorContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_operator);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(119);
			match(OPERATOR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OperandContext extends ParserRuleContext {
		public TerminalNode PARAMETER() { return getToken(PolicyLanguageParser.PARAMETER, 0); }
		public TerminalNode TEXT() { return getToken(PolicyLanguageParser.TEXT, 0); }
		public TerminalNode NUMBER() { return getToken(PolicyLanguageParser.NUMBER, 0); }
		public OperandContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_operand; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PolicyLanguageListener ) ((PolicyLanguageListener)listener).enterOperand(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PolicyLanguageListener ) ((PolicyLanguageListener)listener).exitOperand(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PolicyLanguageVisitor ) return ((PolicyLanguageVisitor<? extends T>)visitor).visitOperand(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OperandContext operand() throws RecognitionException {
		OperandContext _localctx = new OperandContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_operand);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PARAMETER) | (1L << TEXT) | (1L << NUMBER))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Group_byContext extends ParserRuleContext {
		public TerminalNode GROUP_BY() { return getToken(PolicyLanguageParser.GROUP_BY, 0); }
		public TerminalNode ASTERISK() { return getToken(PolicyLanguageParser.ASTERISK, 0); }
		public List<Ship_attributeContext> ship_attribute() {
			return getRuleContexts(Ship_attributeContext.class);
		}
		public Ship_attributeContext ship_attribute(int i) {
			return getRuleContext(Ship_attributeContext.class,i);
		}
		public Group_byContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_group_by; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PolicyLanguageListener ) ((PolicyLanguageListener)listener).enterGroup_by(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PolicyLanguageListener ) ((PolicyLanguageListener)listener).exitGroup_by(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PolicyLanguageVisitor ) return ((PolicyLanguageVisitor<? extends T>)visitor).visitGroup_by(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Group_byContext group_by() throws RecognitionException {
		Group_byContext _localctx = new Group_byContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_group_by);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(123);
			match(GROUP_BY);
			setState(133);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ASTERISK:
				{
				setState(124);
				match(ASTERISK);
				}
				break;
			case PARAMETER:
				{
				setState(125);
				ship_attribute();
				setState(130);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__0) {
					{
					{
					setState(126);
					match(T__0);
					setState(127);
					ship_attribute();
					}
					}
					setState(132);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
